--- a/estilos.css
+++ b/estilos.css
@@ -1,4 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&family=Playfair+Display:wght@400;500;600&family=Roboto:wght@300;400;500&family=Sora:wght@200;400&display=swap');
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css');
+
+:root {
+    --background-color: #1e1e1e;
+    --light-background: #999292;
+    --primary-color: #fff;
+    --secondary-color: #aaa;
+    --primary-font: 'Roboto Mono', monospace;
+    --gap-s: 12px;
+    --gap: 24px;
+    --gap-xl: 48px;
+    --border-radius: 16px;
+    --transition: all 0.3s ease-in-out;
+  }
 
 main{
     display: grid;
@@ -43,3 +57,68 @@ main{
 input{
     border-radius: 5px;
 }
+
+#title{
+    text-decoration: none;
+      color: var(black);
+      font-size: 2rem;
+      font-family: monospace;
+      text-align: center;
+}
+#image{
+    display: flex;
+    justify-content: center;
+}
+
+.loginForm {
+    display: grid;
+    min-height: 100vh;
+    place-content: center;
+    gap: var(--gap);
+  
+    #logout {
+      cursor: pointer;
+    }
+  
+    a {
+      text-decoration: none;
+      color: var(black);
+      font-size: 2rem;
+      text-align: center;
+    }
+  
+    button {
+      outline: none;
+      padding: 12px 4rem 12px 4rem;
+      font-size: 2rem;
+      border: none;
+      border-radius: var(--border-radius);
+      background-color: var(--light-background);
+      color: var(rgb(5, 5, 5));
+    }
+  }
+  
+  .input-icon {
+    position: relative;
+  
+    input {
+      outline: none;
+      padding: 12px 4rem 12px 4rem;
+      font-size: 2rem;
+      border: none;
+      border-radius: var(--border-radius);
+      background-color: var(--light-background)
+    }
+  
+    i {
+      position: absolute;
+      z-index: 1;
+      color: var(--background-color);
+      font-size: 2.4rem;
+      top: 50%;
+      transform: translateY(-50%);
+      right: 1rem;
+    }
+  }
+  
+  
